syntax = "proto3";

package quotes_service;

import "google/protobuf/empty.proto";


service QuoteService {
  rpc GetQuote(google.protobuf.Empty) returns (QuoteMessage) ;
}

message QuoteMessage{
  
    string height = 1;
    string race = 2;
    string gender = 3;
    string birth = 4;
    string spouse = 5;
    string death = 6;
    repeated string quotes = 7;
    string hair = 8;
    string name = 9;
    string wikiUrl = 10;
}